--- a/yellow_cv.html
+++ b/yellow_cv.html
@@ -21,13 +21,13 @@
     <section id="profile" class="profile_sec2">
         <div class="sec1">
             <div class="left-content">
-                <h1>xxxxxxxxxxxxxxxxxx</h1>
-                <p>Nickname : xxxxxxx</p>
-                <p>xxxxxxxxxxxxx</p>
-                <p>"xxxxxxxxxxxxxxxx"</p>
+                <h1>Peerapat Kitpremsak</h1>
+                <p>Nickname : PK</p>
+                <p>Bachelor's degree student of Applied Statistic and Data Analytics</p>
+                <p>"Never Give Up"</p>
             </div>
             <div class="sec1">
-                <img src="image/xxxxxxxxxxx">
+                <img src="image/pkpro.JPG" width="450px" height="600px">
             </div>
         </div>
     </section>
@@ -35,9 +35,9 @@
         <div class="sec2_background2">
             <h1>certificate</h1>
             <div class="certs-container">
-                <img src="image/xxxxxxxxxx" alt="cert1">
-                <img src="image/xxxxxxxxxxx" alt="cert2">
-                <img src="image/xxxxxxxxxx" alt="cert3">
+                <img src="image/pkcer1.JPG" alt="cert1">
+                <img src="image/pkcer2.PNG" alt="cert2">
+                <img src="image/LittlePW.jpeg" alt="cert3">
             </div>
         </div>
     </section>
@@ -47,28 +47,28 @@
                 <h1 style="font-size: 4rem; color: rgb(255, 255, 255);">Contact</h1>
                 <div style="width: 40vw;">
                     <div style="display: flex; align-items: center;" >
-                        <a href="https://discordapp.com/users/843498834835144714" style="text-decoration: none;">
-                            <img src="xxxxxxxxxxxxxxxxxxxxx" alt="DiscordContact"> 
+                        <a href="https://discord.com/invite/5nTAWAfj" style="text-decoration: none;">
+                            <img src="https://img.icons8.com/?size=100&id=30888&format=png&color=000000" alt="DiscordContact"> 
                         </a>
-                        <a href="xxxxxxxxxxxxxxxxx" style="text-decoration: none;">xxxxxxxxxxxxxx</a>
+                        <a href="https://discord.com/invite/5nTAWAfj" style="text-decoration: none;">pk__peerapat</a>
                     </div>
                     <div style="display: flex; align-items: center;">
-                        <a href="xxxxxxxxxxxxxx" style="text-decoration: none;">
+                        <a href="https://www.instagram.com/pk__peerapat/" style="text-decoration: none;">
                             <img src="https://cdn.iconscout.com/icon/free/png-512/free-instagram-63-189784.png?f=webp&w=256" alt="IGContact">
                         </a>
-                        <a href="xxxxxxxxxxxxxxx" style="text-decoration: none;" >xxxxxxxxxxxxx</a>
+                        <a href="https://www.instagram.com/pk__peerapat/" style="text-decoration: none;" >pk__peerapat</a>
                     </div>
                     <div style="display: flex; align-items: center;">
-                        <a href="xxxxxxxxxxxxxxx" style="text-decoration: none;">
+                        <a href="https://www.facebook.com/peerapat.kitpremsak/" style="text-decoration: none;">
                             <img src="https://cdn.iconscout.com/icon/free/png-512/free-facebook-107-432426.png?f=webp&w=256" alt="FBContact">
                         </a>
-                        <a href="xxxxxxxxxx" style="text-decoration: none;">xxxxxxxxxx</a>
+                        <a href="https://www.facebook.com/peerapat.kitpremsak/" style="text-decoration: none;">Peerapat Kitpremsak</a>
                     </div>
                     <div style="display: flex; align-items: center;">
-                        <a href="xxxxxxxxxxxxx" style="text-decoration: none;">
+                        <a href="https://github.com/PKpkit" style="text-decoration: none;">
                             <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="githubContact">
                         </a>
-                        <a href="xxxxxxxxxx" style="text-decoration: none;">xxxxxx</a>
+                        <a href="https://github.com/PKpkit" style="text-decoration: none;">PKpkit</a>
                     </div>
                 </div>
             </div>
