--- a/purple_cv.html
+++ b/purple_cv.html
@@ -26,7 +26,7 @@
                 <p>Bachelor's degree student of Computer Engineering</p>
                 <p>"You only live once, but if you do it right, once is enough."</p>
             </div>
-            <div class="sec1">
+            <div>
                 <img src="image/boothil.png">
             </div>
         </div>
