--- a/yellow_cv.html
+++ b/yellow_cv.html
@@ -26,7 +26,7 @@
                 <p>Bachelor's degree student of Applied Statistic and Data Analytics</p>
                 <p>"Never Give Up"</p>
             </div>
-            <div class="sec1">
+            <div>
                 <img src="image/pkpro.JPG" width="450px" height="600px">
             </div>
         </div>
