--- a/yellow_cv.html
+++ b/yellow_cv.html
@@ -27,7 +27,7 @@
                 <p>"Never Give Up"</p>
             </div>
             <div>
-                <img src="image/pkpro.JPG" width="450px" height="600px">
+                <img src="image/pkpro.JPG">
             </div>
         </div>
     </section>
